# parallel-sobel-edge-detection

./: .gitignore  CMakeLists.txt  Makefile  sobel_openmp  sobel_pthreads
.agents/rules/: rule.md
.agents/skills/my-skill/: SKILL.md
.agents/skills/my-skill/resources/: phase-1-setup.md  phase-2-shared-memory.md  phase-3-distributed-memory.md  phase-4-hybrid-gpu.md  phase-5-analysis.md  phase-6-finalization.md  proposal.md
docs/: phase_1_explanation.md
include/: sobel.h  utils.h
src/: main.cpp  sobel.cpp  sobel_mpi.cpp  sobel_openmp.cpp  sobel_pthreads.cpp  utils.cpp
